#
# Copyright (C) 2020 VMware, Inc. All Rights Reserved.
#
# Licensed under the GNU General Public License v2 (the "License");
# you may not use this file except in compliance with the License. The terms
# of the License are located in the COPYING file of this distribution.
#

ADD_SUBDIRECTORY (tdnf)
ADD_SUBDIRECTORY (systemd)
ADD_SUBDIRECTORY (motdgen.d)
ADD_SUBDIRECTORY (bash_completion.d)
